Fix some issues in ContentIndexer